--- a/build.gradle
+++ b/build.gradle
@@ -72,17 +72,26 @@ jar {
 
 // configure the maven publication
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
+    repositories {
+        maven {
+            name = "shurikMaven"
+            url = "https://maven.shurik.me/releases"
+            credentials {
+                username = shurikMeMavenUser
+                password = shurikMeMavenPass
+            }
+            authentication {
+                basic(BasicAuthentication)
+            }
         }
     }
+    publications {
+        maven(MavenPublication) {
+            groupId = project.maven_group
+            artifactId = project.archives_base_name
+            version = project.mod_version
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
+            from components.java
+        }
     }
 }
